--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,6 +1,6 @@
 <div class="container-fluid footer">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-9">
       <div class="panel panel-default">
         <div class="panel-body small">
           <div class="pull-right">
@@ -8,8 +8,8 @@
             <a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
             <a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
             <a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
-            <a target="_new" ng-show="!header.authentication.user" ui-sref="authentication.signin">Log In</a>
-            <a target="_new" ng-show="header.authentication.user" href="/api/auth/signout" target="_self">Logout</a>           
+            <a target="_new" ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In</a>
+            <a target="_new" ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>           
           </div>
           Environmental Assessment Office, Victoria BC
         </div>
