--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -11,8 +11,7 @@
 					<p><strong>Status</strong>: {{ project.status }}</p>
 					<p><strong>Type</strong>: {{ project.type }}</p>
 					<p>{{ project.description }}</p>
-					<p ng-show="projectList.auth.user === ''"><a html ui-sref="public.project({id: project._id})">Detail View</a></p>
-					<p ng-show="projectList.auth.user !== ''"><a html ui-sref="eao.project({id: project._id})">Detail View</a></p>
+					<p><a html ui-sref="project({id: project._id})">Detail View</a></p>
 				</div>
 			</div>
 		</info-window>
