--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -13,15 +13,15 @@
 		</thead>
 		<tbody>
 
-			<tr ng-repeat="project in projectList.projects" class='clickable'>
-				<td ng-if="project.status === 'In Progress'" ng-click="projectList.optimizedSelectProject(project._id)">{{ project.name }}</td>
-				<td ng-if="project.status === 'In Progress'" ng-click="projectList.optimizedSelectProject(project._id)" colspan="5" class="bg-warning"><!-- show schedule widget --></td>
+			<tr ng-repeat="project in projectList.projects" class='clickable' ui-sref="project({id: project._id})">
+				<td ng-if="project.status === 'In Progress'">{{ project.name }}</td>
+				<td ng-if="project.status === 'In Progress'" colspan="5" class="bg-warning"><!-- show schedule widget --></td>
 
-				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'" ng-click="projectList.optimizedSelectProject(project._id)">{{ project.name }}</td>
-				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'" ng-click="projectList.optimizedSelectProject(project._id)" colspan="5">Project received certificate.</td>
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'" colspan="5">Project received certificate.</td>
 
-				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" ui-sref="eao.editproject({id: project._id})">{{ project.name }}</td>
-				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" ui-sref="eao.editproject({id: project._id})" colspan="5">{{ project.status }}</td>
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" >{{ project.name }}</td>
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" colspan="5">{{ project.status }}</td>
 			</tr>
 
 			<tr ng-if="projectList.projects.length === 0">
