New UI format changes

--- a/modules/configuration/client/views/configuration.html
+++ b/modules/configuration/client/views/configuration.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	<a href ui-sref='eao.projects' class='pull-right return-link'>Return to Project List</a>
+	<a href ui-sref='projects' class='pull-right return-link'>Return to Project List</a>
 	Project Template Provisioning
 
 </h1>
