--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -1,7 +1,7 @@
 <section class="row" ng-controller="PasswordController">
 
   <div class="container-fluid text-right">
-       <p> <a href ui-sref='eao.projects' class='return-link'>Return to Project List</a></p>
+       <p> <a href ui-sref='projects' class='return-link'>Return to Project List</a></p>
   </div>
   <div class="container">
     <div class="panel panel-default">
