--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -581,7 +581,11 @@ nav {
 }
 
 .task-list li {
-	padding-bottom: 5px;
+	padding-top: 5px;
+	position: relative;
+}
+.task-list li:first-child {
+	padding-top: 0;
 	position: relative;
 }
 .task-list li .task-current-status {
