--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,30 +1,34 @@
-<section ng-controller="SettingsController">
+<section class="row" ng-controller="SettingsController">
 
-  <div class="container-fluid text-right">
-       <p> <a href ui-sref='eao.projects' class='return-link'>Return to Project List</a></p>
-  </div>
-  <div class="container">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Settings</h3>
-      </div>
-      <div class="panel-body">
-        <div class="row">
-          <nav class="col-sm-3 col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-              <li ui-sref-active="active">
-                <a ui-sref="settings.profile">Edit Profile</a>
-              </li>
-              <li ui-sref-active="active" ng-show="user.provider === 'local'">
-                <a ui-sref="settings.password">Change Password</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="col-sm-9 col-md-8 settings-view">
-            <div ui-view></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class='col-sm-10'>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Settings</h3>
+			</div>
+			<div class="panel-body">
+				<div class="row">
+					<nav class="col-sm-3 col-md-3">
+						<ul class="nav nav-pills nav-stacked">
+							<li ui-sref-active="active">
+								<a ui-sref="settings.profile">Edit Profile</a>
+							</li>
+							<li ui-sref-active="active" ng-show="user.provider === 'local'">
+								<a ui-sref="settings.password">Change Password</a>
+							</li>
+						</ul>
+					</nav>
+					<div class="col-sm-9 col-md-8 settings-view">
+						<div ui-view></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div> <!-- /col9 -->
+	<div class='col-sm-2'>
+		<tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+	</div>
+
 </section>
