--- a/modules/publicComments/client/views/partials/public-comments-display.html
+++ b/modules/publicComments/client/views/partials/public-comments-display.html
@@ -22,16 +22,16 @@
 
 		</div>
 
-		<div ng-if="(vm.project.dateCommentsOpen && vm.project.dateCommentsClosed)">
+		<div ng-if="(pubComDisp.project.dateCommentsOpen && pubComDisp.project.dateCommentsClosed)">
 			<label class="control-label">Public Comment Period</label>
 			<p>
-				{{ vm.project.dateCommentsOpen | amDateFormat:'MMM Do, YYYY'}} to {{ vm.project.dateCommentsClosed | amDateFormat:'MMM Do, YYYY' }}
-				<span ng-if="(vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)"><br/><strong><em>Open Now</em></strong></span>
+				{{ pubComDisp.project.dateCommentsOpen | amDateFormat:'MMM Do, YYYY'}} to {{ pubComDisp.project.dateCommentsClosed | amDateFormat:'MMM Do, YYYY' }}
+				<span ng-if="(pubComDisp.project.dateCommentsOpen | isInThePast) && (pubComDisp.project.dateCommentsClosed | isInTheFuture)"><br/><strong><em>Open Now</em></strong></span>
 			</p>
 		</div>
 
-		<div class="form-group" ng-if="(vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
-			<a class="btn btn-block btn-success wrap btn-md" href x-modal-add-public-comment x-project="vm.project">Click here to Comment on the Application</a>
+		<div class="form-group" ng-if="(pubComDisp.project.dateCommentsOpen | isInThePast) && (pubComDisp.project.dateCommentsClosed | isInTheFuture)">
+			<a class="btn btn-block btn-success wrap btn-md" href x-modal-add-public-comment x-project="pubComDisp.project">Click here to Comment on the Application</a>
 		</div>
 
 		<div ng-if="pubComDisp.comments.length !== 0 && (pubComDisp.project.dateCommentsOpen | isInThePast) && (pubComDisp.project.dateCommentsClosed | isInTheFuture)">
