--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -43,7 +43,7 @@
 
 </head>
 
-<body class="ng-cloak">
+<body class="ng-cloak" x-scroll>
   <tmpl-header></tmpl-header>
   <section class="content">
     <section class="container-fluid"  x-content-height>
