More UI Transformation

--- a/modules/activities/client/views/activity.html
+++ b/modules/activities/client/views/activity.html
@@ -11,7 +11,7 @@
 		
 	</div> <!-- /col9 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="activity" x-project="proj.project"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="activity" x-project="actBase.project"></tmpl-system-menu>
 	</div>
 
 </section>
