--- a/modules/maps/client/views/partials/map-layers.html
+++ b/modules/maps/client/views/partials/map-layers.html
@@ -1,4 +1,7 @@
-<section class="panel panel-default">
+<section class="block-content">
+
+	<h3>Map</h3>
+
 	<div class='container-fluid'>
 		<div class='row'>
 			<div class='col-md-9 col-no-padding' ng-init="mpl.showPoint = true">
