--- a/modules/projects/client/views/project-partials/project-activities.html
+++ b/modules/projects/client/views/project-partials/project-activities.html
@@ -1,8 +1,6 @@
-<div class="panel panel-default">
+<section class="block-content">
 
-	<div class='panel-heading'>
-		<h3 class='panel-title'>Activities</h3>
-	</div>
+	<h3>Activities</h3>
 
 	<div class='panel-body'>
 
@@ -12,13 +10,13 @@
 				<label class="control-label">Phases</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="phase in projectActs.project.phases">
-						<button class="btn btn-block btn-sm" ng-class="{'btn-success': projectActs.selectedPhase._id === phase._id" ng-click="projectActs.selectedPhase = phase">{{ phase.name }}</button>
+						<button class="btn btn-block btn-sm" ng-class="{'btn-success': projectActs.selectedPhase._id === phase._id}" ng-click="projectActs.selectedPhase = phase">{{ phase.name }}</button>
 					</li>
 				</ul>
 				<label class="control-label">Milestones</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="milestone in projectActs.project.milestones">
-						<button class="btn btn-block btn-sm" ng-class="{'btn-success': projectActs.selectedMilestone._id === milestone._id" ng-click="projectActs.selectedMilestone = milestone">{{ milestone.name }}</button>
+						<button class="btn btn-block btn-sm" ng-class="{'btn-success': projectActs.selectedMilestone._id === milestone._id}" ng-click="projectActs.selectedMilestone = milestone">{{ milestone.name }}</button>
 					</li>
 				</ul>
 
@@ -39,5 +37,4 @@
 		
 	</div> <!-- /panelbody -->
 
-
-</div> <!-- /panel -->
+</section> <!-- /panel -->
