--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -91,16 +91,6 @@ a:visited {
 	text-decoration: none;
 }
 html {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#606c88+0,003366+100;Grey+3D+%232 */
-	background: #606c88; /* Old browsers */
-	background: -moz-linear-gradient(top,  #606c88 0%, #003366 100%); /* FF3.6-15 */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#606c88), color-stop(100%,#003366)); /* Chrome4-9,Safari4-5 */
-	background: -webkit-linear-gradient(top,  #606c88 0%,#003366 100%); /* Chrome10-25,Safari5.1-6 */
-	background: -o-linear-gradient(top,  #606c88 0%,#003366 100%); /* Opera 11.10-11.50 */
-	background: -ms-linear-gradient(top,  #606c88 0%,#003366 100%); /* IE10 preview */
-	background: linear-gradient(to bottom,  #606c88 0%,#003366 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#003366',GradientType=0 ); /* IE6-9 */
-	min-height: 100%;
 
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#606c88+0,fcfcfc+0,f2f2f2+100 */
 	background: #606c88; /* Old browsers */
@@ -771,8 +761,60 @@ h3.firstHeading {
 .list-documents li {
     border-top: 1px solid $border-grey;
     padding: 2px 0;
+    position: relative;
+}
+
+.list-documents li.active,
+.list-documents li.active a {
+	color: #ffffff;
 }
 
 .list-documents li:first-child {
     border-top: none
+}
+
+.list-documents li.active .glyphicon-play {
+	position:absolute;
+	right: 8px;
+	top: 3px;
+}
+
+.vertical-scroll {
+	overflow-x: hidden;
+	overflow-y: auto;
+	min-height: 400px;
+	max-height: 400px;
+}
+
+.col-no-padding li {
+	padding: 2px 8px;
+}
+
+.col-border-right {
+	border-right: 1px solid $border-grey;
+}
+
+ul.list-indent-left {
+	margin-left: 3px;
+	border-left: 1px solid $border-grey;
+	margin-bottom: 0;
+}
+
+.vertical-scroll ul.list-indent-left {
+	min-height: 400px;
+}
+
+ul > li > h3 {
+	margin-top: 5px;
+}
+
+.block-content > h3 {
+	border-bottom: 1px solid $border-grey;
+	padding: 8px 15px;
+	margin-bottom: 0;
+}
+
+.block-content {
+	border-bottom: 1px solid $border-grey;
+	margin-bottom: 15px;
 }
