--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -12,12 +12,12 @@
 			</div>
 		</div>
 
-		<tmpl-projects-map id="map" x-projects='projects.projects'></tmpl-projects-map>
+		<tmpl-projects-map id="anchor-map" x-projects='projects.projects'></tmpl-projects-map>
 
-		<tmpl-projects-schedule id="schedule" x-projects='projects.projects'></tmpl-projects-schedule>
+		<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
 
 		<div x-window-height>
-			<tmpl-recent-activity id="recent"></tmpl-recent-activity>			
+			<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>			
 		</div>
 
 	</div>
