--- a/modules/projects/client/views/project.html
+++ b/modules/projects/client/views/project.html
@@ -7,27 +7,41 @@
 
 		<section class="panel panel-default">
 
-			<tmpl-project-tombstone id="tombstone" x-project="proj.project" ng-if="('project' | shouldDisplayPanel:'tombstone':proj.project.status)">
+			<tmpl-project-tombstone
+				id="anchor-tombstone"
+				x-project="proj.project"
+				ng-if="('project' | shouldDisplayPanel:'tombstone':proj.project.status)">
 			</tmpl-project-tombstone>
 
-			<tmpl-project-stream-select id="stream" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'stream':proj.project.status)">
+			<tmpl-project-stream-select
+				id="anchor-stream"
+				x-project="proj.project"
+				ng-if="('project'| shouldDisplayPanel:'stream':proj.project.status)">
 			</tmpl-project-stream-select>
 
-			<tmpl-documents-browser id="documents" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'documents':proj.project.status)">
+			<tmpl-documents-browser
+				id="anchor-documents"
+				x-project="proj.project"
+				ng-if="('project'| shouldDisplayPanel:'documents':proj.project.status)">
 			</tmpl-documents-browser>
 
-			<tmpl-public-comment-display id="publiccomments" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'public-comments':proj.project.status)">
+			<tmpl-public-comment-display
+				id="anchor-publiccomments"
+				x-project="proj.project"
+				ng-if="('project'| shouldDisplayPanel:'public-comments':proj.project.status)">
 			</tmpl-public-comment-display>
 
-			<tmpl-project-activities id="activities" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'activities':proj.project.status)">
+			<tmpl-project-activities
+				id="anchor-activities"
+				x-project="proj.project"
+				ng-if="('project'| shouldDisplayPanel:'activities':proj.project.status)">
 			</tmpl-project-activities>
 			
-			<tmpl-map id="map" id="map" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'map':proj.project.status)">
+			<tmpl-map
+				id="anchor-map"
+				x-project="proj.project"
+				ng-if="('project'| shouldDisplayPanel:'map':proj.project.status)">
 			</tmpl-map>
-
-
-			<tmpl-project-entry id="edit" x-project="proj.project" ng-if="('project'| shouldDisplayPanel:'edit':proj.project.status)">
-			</tmpl-project-entry>
 
 
 			<tmpl-project-bucket-listing x-project="proj.project" x-filter="proj.artifactView">
