--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -1,4 +1,4 @@
-<div style="position: fixed;">
+<section id="menu-side" style="position: fixed;">
 <!--
 <div class="container" ng-controller="HeaderController">
   <div class="navbar-header">
@@ -97,7 +97,7 @@
 			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-tombstone')"		href="#top">Tombstone</a></li>
 			<li><a x-modal-project-entry href x-project="menu.project">Edit</a></li>
 			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-documents')"		href="#anchor-documents">Documents</a></li>
-			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-publiccomments')"	href="#anchor-publiccomments">Public Comments {{ '|' + angular.element(document.querySelector('#anchor-publiccomments').length) + '|' }}</a></li>
+			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-publiccomments')"	href="#anchor-publiccomments">Public Comments</a></li>
 			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-activities')"		href="#anchor-activities">Activities</a></li>
 			<li><a du-smooth-scroll ng-if="menu.showMenu('anchor-map')"				href="#anchor-map">Map</a></li>
 		</ul>
