--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid footer">
+<div class="container-fluid footer" x-window-height>
   <div class="row">
     <div class="col-xs-10">
       <div class="panel panel-default">
