--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -188,7 +188,7 @@
 					</h3>
 					<hr ng-if='!form[heading]'>
 					<div class="" ng-show='form[heading]'>
-							<div class="row comment-list" ng-repeat-start="item in vm.commentsByTopic[heading] | advancedFilter:vm.filterKeyword | orderBy:'dateAdded':true">
+							<div class="row comment-list" ng-repeat-start="item in vm.commentsByTopic[heading] | advancedFilter:vm.filterKeyword | orderBy:'dateAdded':true track by $index">
 								<div class="col-sm-9">
 									<pre class="form-group">{{ item.comment | maxWords:80:toggleTopicComment[item._id] }}</pre>
 									<p ng-if="(item.comment | wordCount) > 80">
