Word wrap adjustment

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -724,11 +724,9 @@ pre {
 	line-height: inherit;
 	background-color: transparent;
 	border: 0;
-	white-space: pre-wrap;       /* CSS 3 */
-	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	word-wrap: break-word;       /* Internet Explorer 5.5+ */
+	white-space: pre-wrap !important;
+	word-wrap: normal !important;
+	word-break: normal !important;
 }
 
 .scrolling-fixed-box {
