--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -1,4 +1,78 @@
-<section>
+<section class="row">
+  <div class='col-sm-10'>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">User: {{user.username}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-3">
+            <a class="btn btn-default" ui-sref="admin.users"><i class="glyphicon glyphicon-chevron-left
+"></i> View All Users</a>
+            <hr class="visible-xs">
+          </div>
+          <div class="col-sm-9">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="firstName" class="control-label">First Name</label>
+                  <p id="firstName" ng-bind="user.firstName"></p>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="lastName" class="control-label">Last Name</label>
+                  <p id="lastName" ng-bind="user.lastName"></p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="userEmail" class="control-label">Email</label>
+                  <p id="userEmail" ng-bind="user.email"></p>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="provider" class="control-label">Provider</label>
+                  <p id="provider" ng-bind="user.provider"></p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="created" class="control-label">Created</label>
+                  <p id="created" ng-bind="user.created"></p>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="roles" class="control-label">Roles</label>
+                  <p id="roles" ng-bind="user.roles"></p>
+                </div>
+              </div>
+            </div>
+            <div class="text-right">
+              <a class="btn btn-default" ui-sref="admin.user-edit({userId: user._id})">
+                <i class="glyphicon glyphicon-edit"></i> Edit
+              </a>
+              <a class="btn btn-default" ng-click="remove();" ng-if="user._id !== authentication.user._id">
+                <i class="glyphicon glyphicon-trash"></i> Delete
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='col-sm-2'>
+    <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+  </div>
+
+<!--
   <div class="page-header">
     <div class="row">
       <div class="col-md-6">
@@ -48,4 +122,5 @@
       </div>
     </div>
   </div>
+  -->
 </section>
