--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -1,30 +1,35 @@
-<section class="row" ng-controller="ChangePasswordController">
-  <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4">
+<section ng-controller="ChangePasswordController">
     <form name="passwordForm" ng-submit="changeUserPassword(passwordForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
-        <div class="form-group" show-errors>
-          <label for="currentPassword">Current Password</label>
-          <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="passwordDetails.currentPassword" placeholder="Current Password" required>
-          <div ng-messages="passwordForm.currentPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Your current password is required.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="form-group" show-errors>
+              <label for="currentPassword" class="control-label">Current Password</label>
+              <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="passwordDetails.currentPassword" placeholder="Current Password" required>
+              <div ng-messages="passwordForm.currentPassword.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Your current password is required.</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="newPassword">New Password</label>
-          <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="passwordDetails.newPassword" placeholder="New Password" required>
-          <div ng-messages="passwordForm.newPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Enter a new password.</p>
+          <div class="col-md-4">
+            <div class="form-group" show-errors>
+              <label for="newPassword" class="control-label">New Password</label>
+              <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="passwordDetails.newPassword" placeholder="New Password" required>
+              <div ng-messages="passwordForm.newPassword.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Enter a new password.</p>
+              </div>
+            </div>
           </div>
+          <div class="col-md-4"><div class="form-group" show-errors>
+            <label for="verifyPassword" class="control-label">Verify Password</label>
+            <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="passwordDetails.verifyPassword" placeholder="Verify Password" required>
+            <div ng-messages="passwordForm.verifyPassword.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Verify your new password.</p>
+            </div>
+          </div></div>
         </div>
-        <div class="form-group" show-errors>
-          <label for="verifyPassword">Verify Password</label>
-          <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="passwordDetails.verifyPassword" placeholder="Verify Password" required>
-          <div ng-messages="passwordForm.verifyPassword.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Verify your new password.</p>
-          </div>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-lg btn-primary">Save Password</button>
+        <div class="text-right form-group">
+          <button type="submit" class="btn btn-default">Save Password</button>
         </div>
         <div ng-show="success" class="text-center text-success">
           <strong>Password Changed Successfully</strong>
@@ -34,5 +39,4 @@
         </div>
       </fieldset>
     </form>
-  </div>
 </section>
