--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -8,17 +8,25 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
-					<nav class="col-sm-3 col-md-3">
-						<ul class="nav nav-pills nav-stacked">
-							<li ui-sref-active="active">
-								<a ui-sref="settings.profile">Edit Profile</a>
-							</li>
-							<li ui-sref-active="active" ng-show="user.provider === 'local'">
-								<a ui-sref="settings.password">Change Password</a>
-							</li>
-						</ul>
-					</nav>
-					<div class="col-sm-9 col-md-8 settings-view">
+
+						<nav class="col-sm-3">
+							<ul class="nav nav-pills nav-stacked">
+								<li ui-sref-active="active">
+									<a ui-sref="settings.profile">Edit Profile</a>
+								</li>
+								<li ui-sref-active="active" ng-show="user.provider === 'local'">
+									<a ui-sref="settings.password">Change Password</a>
+								</li>
+								<li ui-sref-active="active" ng-show="user.provider === 'local'">
+									<a ui-sref="settings.invite">Send Invitation</a>
+								</li>
+								<li ui-sref-active="active" ng-show="user.provider === 'local'">
+									<a ui-sref="admin.users">List Users</a>
+								</li>
+							</ul>
+							<hr class="visible-xs">
+						</nav>
+					<div class="col-sm-9 settings-view">
 						<div ui-view></div>
 					</div>
 				</div>
